src/snapshot_middleware/snapshots/librojo__snapshot_middleware__project__test__project_with_path_to_project_with_children.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo/default.project.json
  relevant_paths:
    - /foo/other.project.json
    - /foo/default.project.json
  context:
    emit_legacy_scripts: true
  middleware: project
  specified_id:
    Ref: "00000000000000000000000000000000"
name: path-child-project
class_name: Folder
properties: {}
children:
  - snapshot_id: "00000000000000000000000000000000"
    metadata:
      ignore_unknown_instances: true
      instigating_source:
        ProjectNode:
          path: /foo/other.project.json
          name: SomeChild
          node:
            $className: Model
          parent_class: Folder
      relevant_paths: []
      context:
        emit_legacy_scripts: true
      middleware: ~
      specified_id:
        Ref: "00000000000000000000000000000000"
    name: SomeChild
    class_name: Model
    properties: {}
    children: []

