src/snapshot_middleware/snapshots/librojo__snapshot_middleware__project__test__project_with_path_to_txt.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo/default.project.json
  relevant_paths:
    - /foo/other.txt
    - /foo/other.meta.json
    - /foo/default.project.json
  context:
    emit_legacy_scripts: true
  middleware: text
  specified_id:
    Ref: "00000000000000000000000000000000"
name: path-project
class_name: StringValue
properties:
  Value:
    String: "Hello, world!"
children: []

